# jq.bzl

./: .bazelrc  .gitattributes  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  MODULE.bazel  README.md
.aspect/workflows/: config.yaml
.github/workflows/: ci.yaml  publish.yaml  release.yaml  release_prep.sh  tag.yaml
docs/: MODULE.bazel
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
e2e/smoke/tests/: jq_bin.sh  jq_host_alias.sh
jq/: BUILD.bazel  extensions.bzl  jq.bzl
jq/private/: BUILD.bazel  jq.bzl
jq/tests/: BUILD.bazel  a.json  a_b_merged.json  b.json  raw_expected.json
jq/toolchain/: BUILD  platforms.bzl  toolchain.bzl  versions.bzl
tools/: BUILD  preset.bazelrc
