# Override http_archive for local testing
local_repository(
    name = "jq.bzl",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

######################
# jq.bzl setup #
######################
http_archive(
    name = "aspect_bazel_lib",
    sha256 = "6fd3b1e1a38ca744f9664be4627ced80895c7d2ee353891c172f1ab61309c933",
    strip_prefix = "bazel-lib-3.0.0",
    url = "https://github.com/bazel-contrib/bazel-lib/releases/download/v3.0.0/bazel-lib-v3.0.0.tar.gz",
)

load("@aspect_bazel_lib//lib:repositories.bzl", "aspect_bazel_lib_dependencies", "aspect_bazel_lib_register_toolchains")

# Required bazel-lib dependencies

aspect_bazel_lib_dependencies()

# Register bazel-lib toolchains

aspect_bazel_lib_register_toolchains()
