# Override http_archive for local testing
local_repository(
    name = "jq.bzl",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

######################
# jq.bzl setup #
######################
http_archive(
    name = "aspect_bazel_lib",
    sha256 = "fc459ce72f198d3822cfaf8ddcd07f2afef71d356d1f0fe513bb1638c5094bbd",
    strip_prefix = "bazel-lib-2.22.0",
    url = "https://github.com/bazel-contrib/bazel-lib/releases/download/v2.22.0/bazel-lib-v2.22.0.tar.gz",
)

load("@aspect_bazel_lib//lib:repositories.bzl", "aspect_bazel_lib_dependencies", "aspect_bazel_lib_register_toolchains")

# Required bazel-lib dependencies

aspect_bazel_lib_dependencies()

# Register bazel-lib toolchains

aspect_bazel_lib_register_toolchains()
