load("@bazel_lib//:bzl_library.bzl", "bzl_library")

exports_files(["parse_status_file.jq"])

bzl_library(
    name = "jq",
    srcs = ["jq.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_lib//lib:expand_make_vars",
        "@bazel_lib//lib:stamping",
        "@bazel_lib//lib:strings",
    ],
)
